<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">私募云理财师</string>
    <string name="nav_back_again_finish">再按一次退出程序</string>
    <string name="avd_no_wifi_str">您正在使用非WIFI网络，播放将产生费用...</string>
    <string name="avd_rich_go_str">土豪请继续</string>
    <string name="no_videoid_str">你播放的视频不存在</string>
    <string name="avd_no_net_str">网络未连接，请检查网络设置</string>
    <string name="avd_ref_str">刷新重试</string>
    <string name="avd_play_error_str">播放失败</string>
    <string name="avd_try_again_str">请重新尝试</string>
    <string name="cache_str">缓存</string>
    <string name="avd_please_choise_str">请选择缓存清晰度</string>
    <string name="hd_str">高清</string>
    <string name="sd_str">标清</string>
    <string name="avd_look_cache_str">查看缓存视频</string>
    <string name="caching_str">缓存中</string>
    <string name="cached_str">已缓存</string>
    <string name="paused_str">已暂停</string>
    <string name="menu_play_history_str">播放历史</string>
    <string name="menu_download_video_str">下载视频</string>
    <string name="delete_str">删除</string>
    <string name="delete_1_str">删除(%s)</string>
    <string name="played_str">" 已播放 %s"</string>
    <string name="play_history_str">播放记录</string>
    <string name="choice_all_str">全选</string>
    <string name="cancel_str">取消</string>
    <string name="enter_str">确认</string>
    <string name="cancel_choice_all_str">取消全选</string>
    <string name="local_video_str">下载记录</string>
    <string name="avd_start_all">全部开始</string>
    <string name="avd_all_space_str">总空间</string>
    <string name="avd_free_space_str">剩余</string>
    <string name="vdla_is_sure_delete_str">是否要删除正在播放的视频文件？</string>
    <string name="vdla_stop_all_str">全部暂停</string>

    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="hotline">400-188-8848</string>
    <string name="no_phone_number">对不起，手机号码为空</string>
    <string name="risk_comment_prmpt">当前问卷填写的内容将不会保存，确定要返回么?</string>
    <string name="fc_college_title_str">学院</string>
    <string name="save">保存</string>
    <string name="frashing">刷新中</string>
    <string name="loading">加载更多...</string>

    <string name="info_plamfort_server">平台客服</string>
    <string name="info_zhibo_video">直播</string>
    <string name="info_product_dynic">产品</string>
    <string name="info_market_reprot">营销</string>
    <string name="info_run_notice">运营</string>
    <string name="info_system_notice">系统</string>
    <string name="info_small_mishu">小秘书</string>
    <string name="info_trade">交易</string>
    <string name="info_speceil">特殊消息</string>
    <string name="simuyun">私募云</string>
    <string name="share">分享</string>
    <string name="bind_phone">填写手机号</string>
    <string name="loadingmore">加载更多中...</string>
    <string name="login_see_product">登录后查看</string>
    <string name="updata_app">立即升级</string>
    <string name="updata_wifi_hint">建议在wifi环境下更新哦~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="netdata_empty">数据为空</string>

    <string name="gesture_new_no_dialog_desc">为保障您的私密信息安全，建议您设置手势密码。若您当前暂不想设置，随后可在我的－设置－开启手势密码</string>
    <string name="gesture_new_no_set">暂不设置</string>
    <string name="video_play_env_exception">当前视频播放网络环境异常, 请稍后观看</string>

    <string name="footer_huatai">华泰证券</string>
    <string name="footer_xinda">信达投资</string>
    <string name="footer_desc">旗下基金注资，值得信赖</string>
    <string name="product_detail">商品详情</string>
    <string name="token_error_510_str">账号加密信息已过期，请重新登录获取，如有疑问，请致电客服：400-188-8848</string>
    <string name="token_error_511_str">您的账号已在其它设备上登录，如非本人操作请尽快修改密码。</string>
    <string name="no_product_str">当前暂无专题</string>
    <string name="reload_str">下拉重新加载</string>
    <string name="click_reload_str">点击重新加载</string>
    <string name="no_moredata">暂无更多数据</string>
    <string name="err_net_str">网络连接异常，请检查您的网络设置</string>
    <string name="error_net">网络连接异常,请检查您的网络</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <!-- ============ 分享======== -->
    <string name="share_my_card">&#160;&#160;&#160;分享我的职业名片</string>
    <string name="copyscuuced">复制成功</string>
    <string name="no_weixin">未安装微信</string>
    <string name="nulll">--</string>

    <string name="health_course">健康课堂</string>
    <string name="lianxiren">联系人</string>
    <string name="weixin">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="youjian">邮件</string>
    <string name="duanxin">短信</string>
    <string name="fuzhilianjie">复制链接</string>
    <string name="pleaseinstanllweixin">请安装微信</string>
    <string name="zhuliqiye">我们正在助力的核心企业</string>
    <string name="yiqizhuli">一起来为我助力的企业助力吧</string>
    <string name="gettravel">赢取价值2万元的私人订制旅游</string>

    <string name="open_member">您将解锁以下新的权益</string>
    <string name="now_look_new_member">立即查看新的权益</string>
    <string name="know_more">了解更多</string>
    <string name="get_caifu">您可以通过以下方式提升财富值，获得更多权益及服务：</string>
    <string name="share_to">分享到:</string>
    <string name="data_error">数据异常</string>
    <string name="look_more">查看更多</string>
    <string name="health_recode_discovery">健康咨询记录</string>
    <string name="health_order_recode">健康订单记录</string>
    <string name="travel_order">旅游订单</string>

    <string name="permission_help">帮助</string>
    <string name="permission_help_text">私享云缺少必要权限：\n\n%s\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。</string>
    <string name="permission_quit">退出</string>
    <string name="permission_setting">设置</string>
    <string name="permission_audio_str">音频录制权限\n</string>
    <string name="permission_sdcard_str">访问sdcard权限\n</string>
    <string name="permission_camera_str">相机权限\n</string>
    <string name="permission_sms_str">发送短信权限\n</string>
    <string name="permission_contancts_str">读取联系人权限\n</string>
    <string name="permission_phone_str">读取电话的状态权限\n</string>
    <string name="permission_location_str">访问范围性的定位权限\n</string>
    <string name="permission_extenge_str">照片、媒体内容和文件权限\n</string>
    <string name="note">短信</string>
    <string name="copy">复制</string>


    <string name="immediately">立即转入</string>
    <string name="private_fund">私募基金</string>
    <string name="publish_regist">公募基金开户</string>
    <string name="finished_public_fund_create_account">公募基金开户</string>
    <string name="public_fund">公募基金</string>
    <string name="private_share_bao">盈泰钱包</string>
    <string name="my_private_share_bao">我的盈泰钱包</string>
    <string name="my_public_fund">我的公募基金</string>
    <string name="now_transfer">立即转入</string>
    <string name="look_public_fund_product">看看公募基金产品</string>
    <string name="serven_increase_percent">七日年化收益率</string>
    <string name="wan_fen_increase_value">万份收益(元)</string>
    <string name="subsist_assert">资产(%1$s)</string>
    <string name="continue_income">持有收益(%1$s)</string>
    <string name="yestoday_income">昨日收益(%1$s)</string>
    <string name="public_fund_no_assert">您还没有资产，可以</string>

    <string name="public_fund_setting_account_create">公募基金开户认证</string>
    <string name="public_fund_setting_account_info">公募基金身份信息</string>
    <string name="public_fund_setting_bind_bankcard">绑定银行卡</string>
    <string name="public_fund_setting_bankcard_info">公募基金银行卡信息</string>
    <string name="public_fund_setting_modify_public_fund_password">重置公募基金交易密码</string>
    <string name="public_fund_setting_risk">查看风险测评</string>
    <string name="user_name">姓名</string>
    <string name="identify_number">身份证号</string>
    <string name="hint_identify_number">请输入身份证号</string>
    <string name="hint_identify_number_erro_prompt">输入身份证号错误!</string>
    <string name="hint_phone_number_error_prompt">输入手机号错误!</string>
    <string name="modify_public_fund_trade_pwd">重置公募基金交易密码</string>
    <string name="phone_number">手  机  号</string>
    <string name="hint_phone_number">请输入手机号</string>
    <string name="validate_code">验  证  码</string>
    <string name="hint_validate_code">请输入验证码</string>
    <string name="trade_password">交易密码</string>
    <string name="hint_trade_password">请输入交易密码</string>
    <string name="get_phone_validate_code">获取验证码</string>
    <string name="risk_prompt">请不要使用过于简单的密码（如：自己的生日、简单连续的数字等）</string>
    <string name="confirm">确定</string>
    <string name="after_appraisal_canvisible">合格投资者认定</string>
    <string name="ten_thousand">万</string>
    <string name="performance_standard">业绩基准</string>
    <string name="residue_limit">剩余额度</string>
    <string name="public_fund_risk">风险测评</string>
    <string name="bind_new_card">绑定新卡</string>
    <string name="public_bankcard_select_up_notes">可能会由于支付渠道发生调整，导致个别银行暂时无法使用或者限额有所调整，请以实际交易为准。</string>
    <!--图片查看器下标-->
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="public_risk_evaluation">未完成风险评测，是否离开？</string>
    <string name="low_risk">低风险</string>
    <string name="flexible">灵活存取</string>
    <string name="thousand_subscription">千元起购</string>
</resources>
