<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            style="@style/style_padding"
            android:text="@string/share_to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sahre_note_bt"
                style="@style/style_share_item"
                android:drawableTop="@drawable/share_note"
                android:text="@string/note"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/sahre_wx_bt"
                style="@style/style_share_item"
                android:drawableTop="@drawable/share_wechat"
                android:text="@string/weixin"
                 />

            <TextView
                android:id="@+id/sahre_circle_bt"
                style="@style/style_share_item"
                android:drawableTop="@drawable/share_pyq"
                android:text="@string/pengyouquan"
                 />
            <TextView
                android:id="@+id/sahre_copy_bt"
                style="@style/style_share_item"
                android:drawableTop="@drawable/share_copy"
                android:text="@string/copy"
                android:visibility="gone"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/sahre_cancle_bt"
            style="@style/style_share_bt"
            android:text="@string/cancel_str"
            />
    </LinearLayout>
</RelativeLayout>