<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/title_bar_id"
        layout="@layout/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.cgbsoft.lib.widget.SettingItemNormal
        android:id="@+id/sin_public_fund_account_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setting_item_title="@string/public_fund_setting_account_create"
        />

    <com.cgbsoft.lib.widget.SettingItemNormal
        android:id="@+id/sin_public_fund_bankcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setting_item_title="@string/public_fund_setting_bind_bankcard"
        />

    <com.cgbsoft.lib.widget.SettingItemNormal
        android:id="@+id/sin_public_fund_trade_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setting_item_title="@string/public_fund_setting_modify_public_fund_password"
        />

</LinearLayout>
