<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/title_normal_new"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_70_dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/identify_number"
            android:layout_marginLeft="@dimen/ui_15_dip"
            android:textSize="@dimen/dimens_sp_16"/>

        <EditText
            android:id="@+id/et_identify_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_sp_16"
            android:layout_marginLeft="@dimen/ui_30_dip"
            android:textColorHint="@color/color_A5A5A5"
            android:maxLines="1"
            android:hint="@string/hint_identify_number"
            />
    </LinearLayout>
    <include
        layout="@layout/acitivity_divide_online"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/ui_20_dip"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_70_dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/phone_number"
            android:layout_marginLeft="@dimen/ui_15_dip"
            android:textSize="@dimen/dimens_sp_16"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_sp_16"
            android:layout_marginLeft="@dimen/ui_30_dip"
            android:textColorHint="@color/color_A5A5A5"
            android:maxLength="16"
            android:hint="@string/hint_phone_number"
            />

        <TextView
            android:layout_width="86dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/dimens_sp_14"
            android:textColor="@color/white"
            android:background="@color/app_golden"
            android:id="@+id/get_phone_validate_code"
            android:text="@string/get_phone_validate_code"/>
    </LinearLayout>

    <include
        layout="@layout/acitivity_divide_online"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/ui_20_dip"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_70_dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/validate_code"
            android:layout_marginLeft="@dimen/ui_15_dip"
            android:textSize="@dimen/dimens_sp_16"/>

        <EditText
            android:id="@+id/et_validate_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_sp_16"
            android:layout_marginLeft="@dimen/ui_30_dip"
            android:textColorHint="@color/color_A5A5A5"
            android:maxLines="1"
            android:hint="@string/hint_validate_code"
            />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:background="@color/app_bg"
        android:layout_height="@dimen/ui_10_dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_70_dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/trade_password"
            android:layout_marginLeft="@dimen/ui_15_dip"
            android:textSize="@dimen/dimens_sp_16"/>

        <EditText
            android:id="@+id/et_trade_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_sp_16"
            android:layout_marginLeft="@dimen/ui_30_dip"
            android:textColorHint="@color/color_A5A5A5"
            android:maxLines="1"
            android:hint="@string/hint_trade_password"
            />
    </LinearLayout>
    
    <TextView
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/ui_15_dip"
        android:layout_marginRight="@dimen/ui_15_dip"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_sp_14"
        android:gravity="center"
        android:background="@color/app_golden"
        android:text="@string/rc_confirm"
        />
</LinearLayout>