<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_sp_14"
            android:textColor="@color/c_high_black"
            android:drawableLeft="@drawable/ic_footer_huatai"
            android:drawablePadding="2dp"
            android:layout_marginRight="10dp"
            android:text="@string/footer_huatai"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_footer_xinda"
            android:drawablePadding="2dp"
            android:text="@string/footer_xinda"
            android:textColor="@color/c_high_black"
            android:textSize="@dimen/dimens_sp_14" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c_high_black"
            android:textSize="@dimen/dimens_sp_14"
            android:text="@string/footer_desc"/>
    </LinearLayout>
</LinearLayout>