<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sharepostbg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_220_px"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/zhuliqiye"
                android:textSize="@dimen/dimens_sp_14"/>

            <TextView
                android:id="@+id/eleven_post_bus_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_sp_10"
                android:text="北京百度网讯科技有限公司"
                android:textStyle="bold"
                android:textSize="@dimen/dimens_sp_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/yiqizhuli"
                android:textSize="@dimen/dimens_sp_14"
                android:layout_marginTop="@dimen/ui_5_dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gettravel"
                android:textSize="@dimen/dimens_sp_14"
                android:layout_marginTop="@dimen/ui_5_dip"/>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>